computer generated sequence working

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -25,6 +25,7 @@
   /* navigation buttons */
   .buttonNav{
   border: none;
+  outline: none;
   background-color: transparent;
   font-size: 30px;
   }
