--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -22,12 +22,20 @@
     width: 400px;
   }
 
+  nav{
+    display: flex;
+  }
+
   /* navigation buttons */
   .buttonNav{
   border: none;
   outline: none;
   background-color: transparent;
   font-size: 30px;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 0px 30px;
   }
 }
 
