added modals to alert user between levels

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -39,6 +39,29 @@
   }
 }
 
+// game communication
+.modal{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  text-align: center;
+  z-index: 3;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  background-color: black;
+  border: 7px white double;
+  color: white;
+
+  h1, h2{
+    width: 200px;
+    margin: 4px 0px;
+  }
+}
+
 /* gameboard buttons */
 .buttonTopLeft, .buttonTopLeftIlluminated{
   @include buttonDims;
@@ -95,3 +118,4 @@
   inset 0 0 50px 10px $buttonColor3,
   inset 0 0 60px 50px lighten($buttonColor3, 20%);
 }
+
